--- a/package.yaml
+++ b/package.yaml
@@ -19,6 +19,16 @@ extra-source-files:
 # common to point users to the README.md file.
 description:         Please see the README on GitHub at <https://github.com/hasanalrasyid/inline-fortran#readme>
 
+default-extensions:
+  - DeriveDataTypeable
+  - CPP
+  - QuasiQuotes
+  - TemplateHaskell
+  - GeneralizedNewtypeDeriving
+  - ForeignFunctionInterface
+  - ScopedTypeVariables
+  - MonadFailDesugaring
+
 dependencies:
     - base >= 4.7 && < 5
     - ansi-wl-pprint
@@ -28,7 +38,8 @@ dependencies:
     - mtl
     - parsec
     - parsers
-    - template-haskell >= 2.12.0.0
+    # bumped up to 2.14.0.0 to have addForeignFilePath
+    - template-haskell >= 2.14.0.0
     - transformers
     - unordered-containers
     - vector
@@ -37,7 +48,14 @@ dependencies:
     - directory
     - filepath
     - binary
-    - cryptonite
+
+    - prettyprinter
+    - deepseq
+    - language-rust
+    - array
+    - json
+    - process
+    - random
 
 library:
   source-dirs: src
@@ -58,8 +76,6 @@ executables:
     dependencies:
     - inline-fortran
     - vector
-    - Chart
-    - Chart-cairo
 
 tests:
   inline-fortran-test:
