--- a/package.yaml
+++ b/package.yaml
@@ -64,14 +64,15 @@ executables:
   inline-fortran-exe:
     main:                Main.hs
     source-dirs:         app
-    c-sources:           app/Main.c
+    #c-sources:           app/Main.c
     cc-options:           -Wall -O2
-    extra-libraries:      gsl gslcblas m
+    #extra-libraries:      gsl gslcblas m
     ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
     - -keep-tmp-files
+    - -Wno-orphans
     - -tmpdir .stack-work/tmpdir
     dependencies:
     - inline-fortran
