implement untuk fortran

--- a/package.yaml
+++ b/package.yaml
@@ -57,6 +57,12 @@ dependencies:
     - process
     - random
 
+    - fortran-src
+
+    - uniplate
+    - text
+    - lens
+
 library:
   source-dirs: src
 
