--- a/stack.yaml
+++ b/stack.yaml
@@ -34,6 +34,7 @@ resolver: lts-13.6
 #  - wai
 packages:
 - .
+- deps/fortran-src
 # Dependency packages to be pulled from upstream that are not in the resolver
 # using the same syntax as the packages field.
 # (e.g., acme-missiles-0.3)
