--- a/package.yaml
+++ b/package.yaml
@@ -88,7 +88,7 @@ executables:
     - -with-rtsopts=-N
     - -keep-tmp-files
     - -Wno-orphans
-    - -tmpdir .stack-work/tmpdir
+#    - -tmpdir .stack-work/tmpdir
     dependencies:
     - inline-fortran
     - vector
