exec masukkan ke test agar bisa diinstall tanpa mengganggu tetangga

--- a/package.yaml
+++ b/package.yaml
@@ -78,7 +78,8 @@ library:
     - src
   extra-libraries:  gfortran #    gsl gslcblas m
 
-executables:
+#executables:
+tests:
   i:
     main:                Main.hs
     source-dirs:         app
