--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,11 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-13.6
+resolver: lts-14.27
+
+nix:
+  enable: true
+  shell-file: shell-stack.nix
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -40,7 +44,7 @@ packages:
 # (e.g., acme-missiles-0.3)
 # extra-deps: []
 extra-deps:
-  - language-rust-0.2.0.27@sha256:d96ec43076689ca8932a78b523b668de30a6b1f3b4fb6386017732028e591da7
+  #  - language-rust-0.2.0.27@sha256:d96ec43076689ca8932a78b523b668de30a6b1f3b4fb6386017732028e591da7
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
