--- a/stack.yaml
+++ b/stack.yaml
@@ -22,7 +22,6 @@ resolver: lts-14.27
 nix:
   enable: true
   shell-file: shell-stack.nix
-
 # User packages to be built.
 # Various formats can be used as shown in the example below.
 #
@@ -38,13 +37,14 @@ nix:
 #  - wai
 packages:
   - .
+  - ./refs/language-rust
 #- deps/fortran-src
+#
 # Dependency packages to be pulled from upstream that are not in the resolver
 # using the same syntax as the packages field.
 # (e.g., acme-missiles-0.3)
 # extra-deps: []
 extra-deps:
-  #  - language-rust-0.2.0.27@sha256:d96ec43076689ca8932a78b523b668de30a6b1f3b4fb6386017732028e591da7
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
