--- a/stack.yaml
+++ b/stack.yaml
@@ -37,7 +37,6 @@ nix:
 #  - wai
 packages:
   - .
-  - ./refs/language-rust
 #- deps/fortran-src
 #
 # Dependency packages to be pulled from upstream that are not in the resolver
@@ -45,7 +44,8 @@ packages:
 # (e.g., acme-missiles-0.3)
 # extra-deps: []
 extra-deps:
-
+  - git: https://github.com/harpocrates/language-rust
+    commit: 9d509c450d009cc99f1180b3f2f30247dfb1cfce
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
