--- a/package.yaml
+++ b/package.yaml
@@ -51,7 +51,7 @@ dependencies:
 
     - prettyprinter
     - deepseq
-    - language-rust # >= 0.2.0.27
+#   - language-rust # >= 0.2.0.27
     - array
     - json
     - process
@@ -78,6 +78,7 @@ library:
   source-dirs:
     - src
     - lang
+    - langR
   other-extensions:
     TemplateHaskell
   ghc-options:
